--- a/src/style.css
+++ b/src/style.css
@@ -330,6 +330,8 @@ a:focus {
     }
 }
 
-.shadow {
+.shadows {
     box-shadow: 0 4px 15px 3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    height: 10rem;
+    width: 20rem;
 }
