--- a/src/style.css
+++ b/src/style.css
@@ -333,3 +333,7 @@ a:focus {
 .shadows {
     box-shadow: 0 4px 15px 3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
+
+.borders {
+    border: 3px solid blueviolet;
+}
